--- a/config/database.yml
+++ b/config/database.yml
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: YOUbit_test
+  database: youbit_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: YOUbit_production
+  database: youbit_production
   username: YOUbit
   password: <%= ENV['YOUBIT_DATABASE_PASSWORD'] %>
